# tinysfm

./: .gitignore  Cargo.toml  LICENSE  MAST3R_DESIGN.md  README.md  test_datasets.json  test_datasets_simple.json
colmap_output/: cameras.txt  images.txt  points3D.txt
nerf_output/: transforms.json
sfm_output/: cameras.txt  images.txt
src/: cli.rs  colmap_to_nerf.rs  image_loader.rs  improvements.md  lib.rs  main.rs  mast3r_pipeline.rs  nerfstudio.rs  production_demo.rs
tests/: component_tests.rs  integration_tests.rs
